# mios32

./: .gitignore  source_me_BLUE_PILL  source_me_MBHP_CORE_LPC17  source_me_MBHP_CORE_STM32  source_me_MBHP_CORE_STM32F4
FreeRTOS/: README_1st.txt
apps/mios32_test/: README.txt
apps/sequencers/LoopA/: .gitignore  CHANGELOG.txt  CMakeLists.txt  Makefile  README.txt  app.c  app.h  app_good.c  app_lcd.c  commonIncludes.h  convBitmap.C  convPNM.C  gfx_resources.h  hardware.c  hardware.h  installation-notes.txt  loopa.c  loopa.h  loopa_datatypes.h  mid_file.c  mid_parser.c  mid_parser.h  midi_out.c  midi_out.h  mios32_config.h  screen.c  screen.h  seq.c  setup.c  setup.h  tasks.h  terminal.c  ui.c  ui.h  voxelspace.c  voxelspace.h
apps/sequencers/LoopA/attic/: app_old.h  v4_live_fwd.c
apps/sequencers/LoopA/gfx/: LoopAFontBold-B.pnm  LoopAFontNormal-B.pnm  LoopAFontSmall-B.pnm  LoopAIconFont.pnm  LoopASmallDigits-B.pnm  LoopASmallLogo.pnm  menu.pnm
apps/sequencers/LoopA/old/: old_v1_loopa.c
bootloader/: Makefile  Makefile.bsl_MBHP_CORE_STM32  Makefile.bsl_STM32_PRIMER  STM32F103_bsl.ld  bsl_sysex.c  bsl_sysex.h  crt0_STM32x.c  gen_inc_file.pl  main.c  mios32_config.h  stm32f10x_conf.h
bootloader/src/: LPC17xx_bsl.ld  Makefile  Makefile.bsl_LPCXPRESSO  Makefile.bsl_LPCXPRESSO_1769  Makefile.bsl_STM32F4DISCOVERY  Makefile.bsl_STM32_PRIMER  Makefile.bsl_dummy  STM32F103_bsl.ld  STM32F407_bsl.ld  bsl_sysex.c  (+5 more)
doc/: MEMO
mios32/: mios32.mk  mios32_dout.h  mios32_iic_midi.h  mios32_midi.h  mios32_sys.c  mios32_uart.h  mios32_uart_midi.h  mios32_usb.h  mios32_usb_com.h
(+4751 files in other folders)
